# chxxxxbot

./: .dockerignore  .env  .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LICENSE  PLAN.md  README.md  SELF_CRITIQUE_PLAN.md  answers.py  bot_users.json  buttons.py  chxxxxbot.service  commands.py  compose.yaml  dialogues.py  gifs.py  install_requires.txt  main.py  nginx-server  nginx.conf  nginx.conf.template  old_main.py  pgdb_scheme.sql  plan.md  plan_bot_api_9_4_topic.md  pyproject.toml  requirements.txt  videos.py
bot/: Dockerfile  config.py  conftest.py  init_db.py  main.py  pyproject.toml  pytest.ini
bot/cache/: batch.py  client.py  exec_cache.py  file_cache.py  keys.py  sandbox_cache.py  thread_cache.py  user_cache.py  write_behind.py
bot/core/: base.py  clients.py  cost_tracker.py  exceptions.py  file_manager.py  files_api.py  message_queue.py  mime_types.py  models.py  pricing.py  provider_factory.py  secrets.py  singleton.py  upload_tracker.py
bot/core/claude/: client.py  context.py  files_api.py
bot/core/google/: client.py
bot/core/subagent/: base.py
bot/core/tools/: __init__.py  analyze_image.py  analyze_pdf.py  base.py  cost_estimator.py  deep_think.py  deliver_file.py  execute_python.py  extended_think.py  extended_thinking.py  generate_image.py  google_search.py  helpers.py  list_files.py  preview_file.py  registry.py  render_latex.py  self_critique.py  transcribe_audio.py
bot/db/: engine.py
bot/db/models/: balance_operation.py  base.py  chat.py  message.py  payment.py  thread.py  tool_call.py  user.py  user_file.py
bot/db/repositories/: balance_operation_repository.py  base.py  chat_repository.py  message_repository.py  payment_repository.py  thread_repository.py  tool_call_repository.py  user_file_repository.py  user_repository.py
bot/dialogs/: templates.py
bot/i18n/: __init__.py  helpers.py  messages.py
bot/keyboards/: inline.py
bot/prompts/: system_prompt.py
bot/services/: balance_policy.py  balance_service.py  cleanup.py  factory.py  payment_service.py  topic_naming.py  topic_relevance.py  topic_routing.py
bot/telegram/: chat_action.py  commands.py  concurrency_limiter.py  draft_streaming.py  generation_tracker.py  loader.py  media_processor.py  thread_resolver.py
bot/telegram/chat_action/: __init__.py  legacy.py  manager.py  resolver.py  scope.py  types.py
bot/telegram/context/: extractors.py  formatter.py
bot/telegram/handlers/: admin.py  announce.py  claude.py  claude_files.py  claude_helpers.py  claude_tools.py  echo.py  edited_message.py  files.py  media_handlers.py  model.py  payment.py  personality.py  start.py  stop_generation.py
bot/telegram/keyboards/: model_selector.py  (+1 more)
bot/tests/: .mypy.ini  conftest.py  manual_test_script.py  pytest.ini  test_config.py  test_main.py
bot/utils/: bot_response.py  logging.py  metrics.py  serialization.py  structured_logging.py
(+240 files in other folders)
