[project]
name = "telegram-llm-bot"
version = "0.1.0"
description = "Telegram bot with LLM integration"
requires-python = ">=3.12"
dependencies = [
    "aiogram==3.15.0",
    "structlog>=24.1.0",
    "pydantic>=2.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []
