[project]
name = "telegram-llm-bot"
version = "0.1.0"
description = "Telegram bot with LLM integration"
requires-python = ">=3.12"
dependencies = [
    "aiogram==3.15.0",
    "structlog>=24.1.0",
    "pydantic>=2.0.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "anthropic>=0.40.0",
    "openai>=1.0.0",
    "e2b-code-interpreter>=1.0.0",
    "google-genai>=1.0.0",
    "pillow>=10.0.0",
    "aiosqlite>=0.19.0",
    "prometheus-client>=0.20.0",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.6.0",
    "yapf>=0.40.0",
    "isort>=5.13.0",
    "pylint>=3.0.0",
    "pydocstyle>=6.3.0",
    "mypy>=1.8.0",
]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []
